--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "mantine",
   "dependencies": {
     "@mantine/core": "^7.2.1",
+    "@mantine/dates": "^7.2.1",
     "@mantine/hooks": "^7.2.1",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0"
   }
 }
