--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@mantine/dates": "^7.2.1",
     "@mantine/hooks": "^7.2.1",
     "dayjs": "^1.11.10",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-icons": "^4.7.1"
   }
 }
